[fix] - se arregla menu user z-index

--- a/ENTREGABLES/my-app/src/components/header/UserMenu/UserMenu.css
+++ b/ENTREGABLES/my-app/src/components/header/UserMenu/UserMenu.css
@@ -1,6 +1,5 @@
 @import "../../../index.css";
 
-
 .user-list-menu {
   list-style: none;
   display: flex;
@@ -17,6 +16,7 @@
   top: 3.5rem;
   right: 1.7rem;
   width: 15rem;
+  z-index: 10;
 }
 
 .user-list-menu-administration {
